--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -30,7 +30,7 @@
 					<p>Actualmente se está utilizando el fichero <a href="https://www.boe.es/doue/2016/119/L00001-00088.pdf" target="_blank">"REGLAMENTO (UE) 2016/ 679 DEL PARLAMENTO EUROPEO"</a>.</p>
 				{% endif %}
 				<input type="submit" value="Enviar" />
-				<div id="loader" class="center"></div>
+				<div class="lds-ellipsis"><div></div><div></div><div></div><div></div></div>
 			</form>
 
 		<!-- Post Header -->
