--- a/web/static/assets/css/main.css
+++ b/web/static/assets/css/main.css
@@ -886,65 +886,29 @@ button,
       margin: 1em 0 0 0;
       position: relative; } }
 
+      @import url(https://fonts.googleapis.com/css?family=Roboto:100);
 
-      .lds-ellipsis,
-      .lds-ellipsis div {
-        box-sizing: border-box;
+      body { margin-top: 100px; background-color: #137b85; color: #fff; text-align:center; }
+      
+      h1 {
+        font: 2em 'Roboto', sans-serif;
+        margin-bottom: 40px;
       }
-      .lds-ellipsis {
+      
+      #loading {
         display: inline-block;
-        position: relative;
-        width: 80px;
-        height: 80px;
-      }
-      .lds-ellipsis div {
-        position: absolute;
-        top: 33.33333px;
-        width: 13.33333px;
-        height: 13.33333px;
+        width: 50px;
+        height: 50px;
+        border: 3px solid rgba(255,255,255,.3);
         border-radius: 50%;
-        background: currentColor;
-        animation-timing-function: cubic-bezier(0, 1, 1, 0);
-      }
-      .lds-ellipsis div:nth-child(1) {
-        left: 8px;
-        animation: lds-ellipsis1 0.6s infinite;
-      }
-      .lds-ellipsis div:nth-child(2) {
-        left: 8px;
-        animation: lds-ellipsis2 0.6s infinite;
-      }
-      .lds-ellipsis div:nth-child(3) {
-        left: 32px;
-        animation: lds-ellipsis2 0.6s infinite;
-      }
-      .lds-ellipsis div:nth-child(4) {
-        left: 56px;
-        animation: lds-ellipsis3 0.6s infinite;
-      }
-      @keyframes lds-ellipsis1 {
-        0% {
-          transform: scale(0);
-        }
-        100% {
-          transform: scale(1);
-        }
-      }
-      @keyframes lds-ellipsis3 {
-        0% {
-          transform: scale(1);
-        }
-        100% {
-          transform: scale(0);
-        }
-      }
-      @keyframes lds-ellipsis2 {
-        0% {
-          transform: translate(0, 0);
-        }
-        100% {
-          transform: translate(24px, 0);
-        }
+        border-top-color: #fff;
+        animation: spin 1s ease-in-out infinite;
+        -webkit-animation: spin 1s ease-in-out infinite;
       }
       
-      
+      @keyframes spin {
+        to { -webkit-transform: rotate(360deg); }
+      }
+      @-webkit-keyframes spin {
+        to { -webkit-transform: rotate(360deg); }
+      }
