--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -6,7 +6,7 @@
     <title>PDF Reader</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="{% static 'assets/css/main.css' %}" />
-
+	<link rel="shortcut icon" type="image/png" href="{% static 'images/favicon.png' %}" >
 </head>
 	<body class="is-preload">
 
