--- a/web/static/assets/css/main.css
+++ b/web/static/assets/css/main.css
@@ -887,19 +887,17 @@ button,
       position: relative; } }
       
       #loading {
+        margin:5px;
         display: inline-block;
-        width: 50px;
-        height: 50px;
+        width: 55px;
+        height: 55px;
         border: 3px solid rgba(255,255,255,.3);
         border-radius: 50%;
         border-top-color: #fff;
-        animation: spin 1s ease-in-out infinite;
-        -webkit-animation: spin 1s ease-in-out infinite;
+        animation: spin 1s infinite;
       }
       
       @keyframes spin {
-        to { -webkit-transform: rotate(360deg); }
-      }
-      @-webkit-keyframes spin {
-        to { -webkit-transform: rotate(360deg); }
+        100% { -webkit-transform: rotate(360deg); 
+          transform:rotate(360deg); }
       }
