--- a/web/static/assets/css/main.css
+++ b/web/static/assets/css/main.css
@@ -888,16 +888,8 @@ button,
       
       #loading {
         margin:5px;
+        padding-top: 5px;
         display: inline-block;
         width: 55px;
         height: 55px;
-        border: 3px solid rgba(255,255,255,.3);
-        border-radius: 50%;
-        border-top-color: #fff;
-        animation: spin 1s infinite;
-      }
-      
-      @keyframes spin {
-        100% { -webkit-transform: rotate(360deg); 
-          transform:rotate(360deg); }
       }
