--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -12,7 +12,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<h1>PDF Reader</h1>
+				<h1><img src="{% static 'images/favicon.png' %}" height="55px"> PDF Reader</h1>
 				<p>Carga tu PDF y hazle preguntas. Así de fácil.</p>
 			</header>
 
@@ -31,11 +31,10 @@
 					<p>Actualmente se está utilizando el fichero <a href="https://www.boe.es/doue/2016/119/L00001-00088.pdf" target="_blank">"REGLAMENTO (UE) 2016/ 679 DEL PARLAMENTO EUROPEO"</a>.</p>
 				{% endif %}
 				<input type="submit" value="Enviar" onclick="showLoading()"/>
-				<div id="loading" style="display:none;"><img src="{% static 'images/spinner.gif' %}" height="35px"></div>
-				
 			</form>
 
 		<!-- Post Header -->
+			<div id="loading" style="display:none;"><img src="{% static 'images/spinner.gif' %}" height="30px"></div>
 			{% if answer%}
 				<header id="post-header">
 					<p><b>Respuesta:</b> {{answer}}</p>
@@ -45,7 +44,7 @@
 		<!-- Footer -->
 			<footer id="footer">
 				<ul class="icons">
-					<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+					<li><a href="https://github.com/eduardtr/readPDFweb" class="icon brands fa-github" target="_blank"><span class="label">GitHub</span></a></li>
 					<li><a href="mailto:eduard.torres.romero@me.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
 				</ul>
 				<ul class="copyright">
