--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -7,6 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="{% static 'assets/css/main.css' %}" />
 	<link rel="shortcut icon" type="image/png" href="{% static 'images/favicon.png' %}" >
+
+	<meta property="og:title" content="PDF Reader" />
+	<meta property="og:description" content="Carga tu PDF y hazle preguntas. Así de fácil." />
+	<meta property="og:type" content="website " />
+	<meta property="og:url" content="https://iapdfreader.duckdns.org/" />
+	<meta property="og:image" content="{% static 'images/favicon.png' %}" />
+
 </head>
 	<body class="is-preload">
 
